[package]
name = "dog-button"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.9"
toml = "0.5"
rodio = {default-features=false, version = "0.15", features = ["symphonia-all"]}
gpio = "0.4"

[dependencies.serde]
version = "1"
features = ["derive"]
